...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087"
        app:srcCompat="@drawable/ezstorelogo" />

    <EditText
        android:id="@+id/Login_Email"
        android:layout_width="@dimen/LoginInputWidth"
        android:layout_height="@dimen/LoginInputHeight"
        android:background="@drawable/input"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
...
        app:layout_constraintTop_toBottomOf="@+id/Login_Email"
        app:layout_constraintVertical_bias="0.075"
        app:passwordToggleDrawable="@drawable/custom_password_eye"
        app:passwordToggleTint="@color/darkGreen">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Login_Password_Text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/input"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textSize="@dimen/EmailText" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Login_Button"
        android:layout_width="@dimen/LoginButtonWidth"
        android:layout_height="@dimen/LoginButtonHeight"
        android:background="@drawable/login_button_animation"
        android:onClick="login"
        android:text="@string/LoginButton"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/LoginButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
