...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.ui.HomeFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dashboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="229dp"
        tools:layout_editor_absoluteY="271dp" />

</LinearLayout>
