<resources>
    <string name="app_name">EZ-Store</string>
    <string name="NoInternet">Opps .. There\'s no internet connection</string>
    <string name="LoginSplash">Login</string>
    <string name="RegisterSplash">Register</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="LoginButton">Login</string>
    <string name="RememberMeText">Remember Me</string>
    <string name="Forgot">Forgot Email/Password ?</string>
...
